--- a/www/templates/grafik/forecast.html
+++ b/www/templates/grafik/forecast.html
@@ -2,7 +2,15 @@
   <ion-content ng-controller="forecastCtrl">
     <div class="card">
         <div class="item item-divider">
-           Forecast chart
+           <i class="item-icon icon-left ion-ios-pulse-strong padding-right"></i> Estimasi Pengeluaran
+        </div>
+        <label class="item">
+          <h2 class="input-label ">Forecast Pengeluaran Untuk Bulan {{bulanKet}} Adalah Rp {{forecastJumlah}} </h2>
+        </label> 
+    </div>
+    <div class="card">
+        <div class="item item-divider">
+           <i class="item-icon icon-left ion-ios-pulse-strong padding-right"></i> Forecast chart
         </div>
         <div class="item item-text-wrap">
             <canvas id="line" class="chart chart-line" chart-data="data"
