--- a/www/templates/pemasukan/pemasukans.html
+++ b/www/templates/pemasukan/pemasukans.html
@@ -71,32 +71,51 @@
     </a>  
     </div> -->
     <ion-list show-delete="data.showDelete" can-swipe="on-swipe-rigth" >
+        <div class="row">
+            <div class="col col-20">            
+                        
+            </div>
+            <div class="col col-20">                
+                <b>Kategori</b>
+            </div>            
+            <div class="col col-20">                
+                <b>Jumlah</b>
+            </div>            
+            <!--
+            <div class="col-10">                
+                Status
+            </div>
+            -->
+            <div class="col col-20" >                
+                <b>Tabungan</b>
+            </div>
+            <div class="col col-20">                
+                <b>Tanggal</b>
+            </div>       
+       </div>
       <ion-item ng-repeat="pemasukan in pemasukans" ng-click="getPemasukan(pemasukan.id)">
         <div class="row">
-            <div class="col-10">            
+            <div class="col col-20">            
             <button class="button"  style="background-color: {{pemasukan.warna}} ; color: #fff; font-size: bold;">
                 {{pemasukan.nama}}                
             </button>            
             </div>
-            <div class="col-10">                
+            <div class="col col-20">                
                  {{pemasukan.namaKategori}}
             </div>            
-            <div class="col-10">                
+            <div class="col col-20">                
                  {{pemasukan.jumlah}}
-            </div>            
+            </div>
+            <!--
             <div class="col-10">                
                 {{pemasukan.toggle}}
             </div>
-            <div class="col-10" >                
+            -->
+            <div class="col col-20" >                
                 {{pemasukan.tabung}}
             </div>
-            <div class="col-10">                
+            <div class="col col-20">                
                     {{pemasukan.tanggal|dates}}                             
-            </div>
-            <div class=>
-              <ion-delete-button class="ion-minus-circled " 
-                             ng-click="onItemDelete(item)">
-              </ion-delete-button>
             </div>
             
                         
