--- a/www/templates/pengeluaran/pengeluarans.html
+++ b/www/templates/pengeluaran/pengeluarans.html
@@ -3,50 +3,45 @@
           <button class="button button-icon icon ion-plus-round" ng-click="pengeluaran()">        
           </button>
     </ion-nav-buttons>
-    <!-- <ion-nav-buttons side="">
-          <button class=" item-icon-right button button-icon icon ion-trash-a" ng-click="pemasukan()">        
-          </button>
-    </ion-nav-buttons>  -->
   <ion-content>
-    <!-- <div class="item tabs tabs-secondary tabs-icon-left">
-    <a class="tab-item" ng-click="pemasukan()">
-    <i class="icon ion-android-add "></i>
-            Input Pemasukan
-    </a>  
-    </div> -->
     <ion-list show-delete="data.showDelete" can-swipe="on-swipe-rigth" >
+        <div class="row">
+            <div class="col col-20">
+                       
+            </div>
+            <div class="col col-20">                
+                <b>Kategori</b>
+            </div>            
+            <div class="col col-20">                
+                 <b>Keterangan</b>
+            </div>            
+            <div class="col col-20">                
+                <b>Jumlah Pengeluaran</b>
+            </div>            
+            <div class="col col-20">                
+                <b>Tanggal</b>                             
+            </div>                                    
+       </div>
       <ion-item ng-repeat="pengeluaran in pengeluarans" ng-click="getPengeluaran(pengeluaran.id)">
         <div class="row">
-            <div class="col-10">
+            <div class="col col-20">
             <button class="button"  style="background-color: {{pengeluaran.warna}} ; color: #fff; font-size: bold;">
                 {{pengeluaran.nama}}                
             </button>           
             </div>
-            <div class="col-10">                
+            <div class="col col-20">                
                  {{pengeluaran.namaKategori}}
             </div>            
-            <div class="col-10">                
-                 {{pengeluaran.nama}}
+            <div class="col col-20">                
+                 {{pengeluaran.keterangan}}
             </div>            
-            <div class="col-10">                
+            <div class="col col-20">                
                 {{pengeluaran.jumlah}}
             </div>            
-            <div class="col-10">                
+            <div class="col col-20">                
                     {{pengeluaran.tanggal|dates}}                             
-            </div>
-            
-            <div class=>
-              <ion-delete-button class="ion-minus-circled " 
-                             ng-click="onItemDelete(item)">
-              </ion-delete-button>
-            </div>
-            
-                        
-       </div>
-       <!-- <div class=" row item-icon-right" ng-click="doDeletePemasukan()">
-              <button class="button button-icon icon ion-trash-a ">        
-            </button>                         
-       </div>     -->       
+            </div>                                    
+       </div>   
       </ion-item>
     </ion-list>
   </ion-content>
