--- a/www/templates/grafik/detailgrafikpemasukan.html
+++ b/www/templates/grafik/detailgrafikpemasukan.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="card"> 
       <label class="item">
-        <h2 class="input-label ">Total Pemasukan : {{totalBulan}} </h2>
+        <h2 class="input-label ">Total Pemasukan : {{totalBulan}}  Sisa Pemasukan Anda : {{sisa}}  Warning : {{pesan}}   </h2>
       </label> 
     </div>
     <div class="card">
