--- a/www/templates/grafik/detailgrafikpengeluaran.html
+++ b/www/templates/grafik/detailgrafikpengeluaran.html
@@ -10,7 +10,7 @@
             Detil Grafik Pengeluaran  
         </div>
         <div class="item item-text-wrap">
-            <canvas id="dougnuth" class="chart chart-doughnut" chart-data="dataDetilBulanP" chart-labels="labelsdataDetilBulanP" chart-colours="dataDetilWarna">
+            <canvas id="dougnuth" class="chart chart-doughnut" chart-data="dataDetilBulanP" chart-labels="labelsdataDetilBulanP" chart-colours="dataDetilWarnaP">
             </canvas>             
         </div>        
     </div>
