--- a/www/templates/pemasukan/pemasukan.html
+++ b/www/templates/pemasukan/pemasukan.html
@@ -19,11 +19,11 @@
         <label class="item item-input" >          
           <span class="input-label">Jumlah Pemasukan</span>
           <input type="number" ng-model="pemasukanData.jumlah">
-          <label  class="toggle">
+          <!-- <label  class="toggle">
             <ion-toggle  ng-model="pemasukanData.toggle"                    
                     class="padding-tops" ng-true-value="'Tetap'" ng-false-value="'Tidak Tetap'" >          
             </ion-toggle>
-          </label>
+          </label> -->
 
           <!-- <h3>Tidak Tetap</h3>
           <label class="toggle toggle-assertive">
@@ -82,11 +82,11 @@
           
           <span class="input-label">Jumlah Pemasukan</span>
           <input type="number" ng-model="pemasukanData.jumlah">
-          <label  class="toggle">
+          <!-- <label  class="toggle">
             <ion-toggle  ng-model="pemasukanData.toggle"                    
                     class="padding-tops" ng-true-value="'Tetap'" ng-false-value="'Tidak Tetap'" >          
             </ion-toggle>
-          </label>
+          </label> -->
 
           <!-- <h3>Tidak Tetap</h3>
           <label class="toggle toggle-assertive">
