--- a/www/templates/pengeluaran/kategori-pengeluaran.html
+++ b/www/templates/pengeluaran/kategori-pengeluaran.html
@@ -2,18 +2,25 @@
   <ion-content>
     <div class="card"> 
       <label class="item item-input">
-        <span class="input-label ">Tambah Kategori</span>
-        <input type="text" ng-model="kategoriData.nama">           
-      </label> 
-      <label class="item item-input">
-        <span class="input-label">Warna</span>
-        <button class="button col-80" color-picker="" model-mode="" color-mode="name" ng-model="kategoriData.warna" modal-title="Choose!" color-box="{{kategoriData.warna}}">
-          {{kategoriData.warna || &apos;Choose a color&apos;}} 
-        </button>       
-      </label>
-      <label class="item ">
-        <button ng-click="saveKategori()" class="button button-block button-positive">Simpan</button>
-      </label>
+          <span class="input-label ">Tambah Kategori</span>
+          <input type="text" ng-model="kategoriData.nama">                   
+      </label>       
+      <div class="row">        
+      <div class="col col-10">
+            <label class="item item-input">
+                <span class="input-label">Warna</span>                               
+            </label>
+      </div>
+      <div class="col col-30">
+            <button class="button button-block button-positive " color-picker=""  color-mode="name" ng-model="kategoriData.warna" modal-title="Choose!" color-box="{{kategoriData.warna}}">
+                  {{kategoriData.warna || &apos;Choose a color&apos;}} 
+            </button>
+      </div>
+      <div class="col">            
+              <button ng-click="saveKategori()" class="button button-block button-positive">Simpan</button>            
+      </div>
+
+      </div>
     </div> 
 
     <div class="card">
