blum bisa daftar

--- a/www/templates/daftar.html
+++ b/www/templates/daftar.html
@@ -1,13 +1,12 @@
-<ion-modal-view>
+<ion-view view-title="Daftar">
   <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closelogin()">Close</button>
+    <h1 class="title">Daftar</h1>
+    <div class="buttons" ng-controller="LoginCtrl">
+      <button class="button button-clear" ng-click="openlogin()"><b>Login</b></button>      
     </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="login()">
-      <div class="list">
+  </ion-header-bar>  
+  <ion-content>    
+      <div class="card">
         <label class="item item-input">
           <span class="input-label">Username</span>
           <input type="text" ng-model="data.username">
@@ -17,9 +16,8 @@
           <input type="password" ng-model="data.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-positive" ng-click="add()">Daftar</button>
         </label>       
       </div>
-    </form>
   </ion-content>
-</ion-modal-view>
+</ion-view>
