daftar gak sinkron sama login

--- a/www/templates/daftar.html
+++ b/www/templates/daftar.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Daftar">
-  <ion-header-bar>
+  <ion-header-bar align-title="centre">
     <h1 class="title">Daftar</h1>
     <div class="buttons" ng-controller="LoginCtrl">
-      <button class="button button-clear" ng-click="openlogin()"><b>Login</b></button>      
+      <button class="button button-positive" ng-click="openlogin()"><b>Login</b></button>      
     </div>
   </ion-header-bar>  
   <ion-content>    
