--- a/www/templates/grafik/detailgrafikpemasukan.html
+++ b/www/templates/grafik/detailgrafikpemasukan.html
@@ -1,19 +1,11 @@
 <ion-view view-title="Grafik">
   <ion-content>
-    <div class="card"> 
-      
-        <div class = "row item item-input">
-            <div class="col col-30">
-                <h4 class="input-label ">Total Pemasukan : {{totalBulan}} </h4>
-            </div>
-            <div class="col col-30">
-                <h4 class="input-label ">Sisa Pemasukan : {{sisa}} </h4>
-            </div>
-            <div class="col">
-                <h4 class="input-label "> Warning : {{pesan}} </h4>
-            </div>
-        </div>        
-      
+    <div class="card">
+        <label class = "item">            
+            <h4 class="input-label ">Total Pemasukan : {{totalBulan}} </h4>           
+            <!-- <h4 class="input-label ">Sisa Pemasukan : {{sisa}} </h4> -->          
+            <h4 class="input-label "> Warning : {{pesan}} </h4>            
+        </label>
     </div>
     <div class="card">
         <div class="item item-divider">
