--- a/www/templates/pemasukan/pemasukan.html
+++ b/www/templates/pemasukan/pemasukan.html
@@ -4,7 +4,7 @@
     .padding-tops{padding-top: 40px;}
     </style>
   </head>
-  <ion-header-bar>
+  <ion-header-bar align-title="centre">
     <h1 class="title">Pemasukan</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closePemasukan()">Close</button>      
