--- a/www/templates/pengeluaran/pengeluaran.html
+++ b/www/templates/pengeluaran/pengeluaran.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar>
+  <ion-header-bar align-title="centre">
     <h1 class="title">Pengeluaran</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closePengeluaran()">Close</button>
