membuat logiin user dan pendaftaran user dengan table users

--- a/www/templates/daftar.html
+++ b/www/templates/daftar.html
@@ -16,7 +16,7 @@
           <input type="password" ng-model="data.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" ng-click="add()">Daftar</button>
+          <button class="button button-block button-positive" ng-click="register()">Daftar</button>
         </label>       
       </div>
   </ion-content>
